traefik/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(\`local.example.io\`)
    kind: Rule
    middlewares:
    - name: traefik-dashboard-basicauth
      namespace: traefik
    services:
    - name: api@internal
      kind: TraefikService
  tls:
    secretName: local-example-io-staging-tls
